2006-03-20  Keith Goodman  <kwgoodman@gmail.com>

	* miscellaneous/mkoctfile.m: Make it possible to call mkoctfile
	shell script from Octave prompt.

2006-03-17  John W. Eaton  <jwe@octave.org>

	* deprecated/weibcdf.m, deprecated/weibinv.m,
	deprecated/weibpdf.m, deprecated/weibrnd.m: New functions.

	* deprecated/weibull_cdf.m, deprecated/weibull_inv.m,
	deprecated/weibull_pdf.m, deprecated/weibull_rnd.m:
	Call new wbl functions to do the real work.
	Swap args and provide default values as necessary to preserve
	compatibility with old version of Octave.

	* statistics/distributions/wblcdf.m: Rename from weibcdf.m.
	statistics/distributions/wblinv.m: Rename from weibinv.m.
	statistics/distributions/wblpdf.m: Rename from weibpdf.m.
	statistics/distributions/wblrnd.m: Rename from weibrnd.m.
	Swap scale and shape args for compatibility.

	* deprecated/lognormal_cdf.m, deprecated/lognormal_inv.m,
	deprecated/lognormal_pdf.m, deprecated/lognormal_rnd.m:
	Preserve compatibility with old versions of Octave given new
	definitions of logncdf, logninv, lognpdf, and lognrnd.

	* statistics/distributions/logncdf.m,
	statistics/distributions/logninv.m,
	statistics/distributions/lognpdf.m,
	statistics/distributions/lognrnd.m: Compatibility fixes.
	From Ben Barrowes  <barrowes@alum.mit.edu>

	* deprecated/hypergeometric_rnd.m: Update interface to match
	current 2.1.x version.

	* deprecated/t_rnd.m: Call trnd, not t_rnd.

	* miscellaneous/dir.m: Use readdir instead of glob.
	Special case for "." to avoid globbing.  Use list_in_columns.
	Eliminate unused variables len and finfo.

2006-03-16  Bill Denney  <bill@givebillmoney.com>

	* miscellaneous/dir.m: Improve compatibility.

2006-03-15  William Poetra Yoga Hadisoeseno  <williampoetra@gmail.com>

	* time/calendar.m, time/datestr.m, time/datevec.m, time/eomday.m,
	time/now.m, time/weekday.m: New functions from Octave Forge.

2006-03-16  John W. Eaton  <jwe@octave.org>
